Version 1.1.0 release Check CHANGELOG for details